2009-11-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZGlass.cxx:
	* Glasses/ZGlass.h:
	Add MC_IsDetached bit to MirComponents_e and handle it in
	assert_MIR_presence().

	* Glasses/PupilInfo.cxx:
	Rewrite ToPupilFrame(ZNode*) to use a set of top-level nodes and
	check it when going up following the parent links.

	* Pupils/Pupil.cxx:
	Do not hold the PupilInfo read-lock throughout SetAbsRelCamera().
	Beautify it.

	Remove double RQN_link_change check in AbsorbRay().
	Beautify it.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h:
	Add function:
	  Bool_t TransformMouseRayVectors(ZNode* ref, TVector3& pos, TVector3& dir)
	that transforms mouse-ray vectors into given frame.

	Add data-members Int_t mMouseDragDX, mMouseDragDY.

	* Rnr/GL/GLRnrDriver.cxx:
	* Rnr/GL/GLRnrDriver.h:
	* Rnr/GL/PupilInfo_GL_Rnr.cxx:
	Rename data-members mMDrgDX/Y to mMDragDX/Y;

2009-11-21  Matevz Tadel  <matevz.tadel@ijs.si>

	Extensions for incarnation of proto Spiritios.

	* Eye/OptoStructs.cxx:
	* Eye/OptoStructs.h:
	Add function ZGlassImg::DumpLinkData() to simplify debugging of
	registered link data.

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h:
	Use L{f} pragma for links mOverlay and mEventHandler. Thus
	sub-classes can restrict the FID of assigned lenses.

	Add local members holding last-render (cam-fix-trans, true window
	widt and height) and last-event (mouse pos, ray vectors defined by
	the mouse position) info. These are copied in by the
	PupilInfo_GL_Rnr.

	* Glasses/ZGlPerspective.cxx:
	* Glasses/ZGlPerspective.h:
	Add new ViewMode_e entry, VM_OrthoTrueAspect, to make it easy to
	define "square" coordinate systems (where unit in horizontal and
	vertical direction has the same lenght). Add function:
	  void StandardTrueAspect(); // X{E}
	to make it easy to setup.

	* Glasses/ZHashList.cxx:
	* Glasses/ZHashList.h:
	Add functions:
	  virtual void MoveToFront(ZGlass* lens); // X{E} C{1}